<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="get_the_ticket">Get The Ticket</string>
    <string-array name="release_date">
        <item>April 25, 2018</item>
        <item>February 10, 2016</item>
        <item>February 16, 2019</item>
        <item>October 03, 2018</item>
        <item>December 12, 2018</item>
        <item>April 26, 2019</item>
        <item>July 21, 2014</item>
        <item>July 02, 2019</item>
        <item>December 15, 2012</item>
        <item>August 26, 2016</item>
    </string-array>
    <string name="synopsis">Synopsis</string>
    <string-array name="directed_by">
        <item>Anthony Russo\nJoe Russo</item>
        <item>Tim Miller</item>
        <item>Tatsuya Nagamine</item>
        <item>Ruben Fleischer</item>
        <item>Bob Persichetti\nPeter Ramsey\nRodney Rothman</item>
        <item>Anthony Russo\nJoe Russo</item>
        <item>James Gunn</item>
        <item>Jon Watts</item>
        <item>Tatsuya Nagamine</item>
        <item>Makoto Shinkai</item>
    </string-array>
    <string-array name="produced_by">
        <item>Kevin Feige</item>
        <item>Simon Kinberg\nRyan Reynolds\nLauren Shuler Donner</item>
        <item>Toei Animation</item>
        <item>Avi Arad\nMatt Tolmach\nAmy Pascal</item>
        <item>Avi Arad\nAmy Pascal\nPhil Lord\nChristoper Miller\n Christoper Steinberg</item>
        <item>Kevin Feige</item>
        <item>Kevin Feige</item>
        <item>Kevin Feige\nAmy Pascal</item>
        <item>Yoshihiko Taneda\nMakoto Seino</item>
        <item>Noritaka Kawaguchi\nGenki Kawamura</item>
    </string-array>
    <string name="screenplay_by">Screenplay By</string>
    <string-array name="based_on">
        <item>The Avengers\nby Stan Lee\nJack Kirby</item>
        <item>Deadpool\nby Fabian Nicieza, Rob Liefeld</item>
        <item>Dragon Ball\nby Akira Toriyama</item>
        <item>Venom\nby Todd McFarlane, David Michelinie</item>
        <item>Spider-Man\nby Stan Lee</item>
        <item>The Avengers\nby Stan Lee\nJack Kirby</item>
        <item>Guardians of the Galaxy\nbyDan Abnett, Andy Lanning</item>
        <item>Spider-Man\nby Stan Lee, Steve Ditko</item>
        <item>	One Piece\nby Eiichiro Oda</item>
        <item>-</item>
    </string-array>
    <string-array name="starring">
        <item>Robert Downey Jr.\nChris Hemsworth\nMark Ruffalo\nChris Evans\nScarlett Johansson\nBenedict Cumberbatch\nDon Cheadle\nTom Holland\nChadwick Boseman\nPaul Bettany\nElizabeth Olsen\nAnthony Mackie\nSebastian Stan\nDanai Gurira\nLetitia Wright\nDave Bautista\nZoe Saldana\nJosh Brolin\nChris Pratt</item>
        <item>Ryan Reynolds\nMorena Baccarin\nEd Skrein\nT. J. Miller\nGina Carano\nBrianna Hildebrand</item>
        <item>Masako Nozawa\nRyō Horikawa\nBin Shimada\nRyūsei Nakao\nAya Hisakawa\nToshio Furukawa\nTakeshi Kusao\nKōichi Yamadera\nMasakazu Morita\nKatsuhisa Hōki</item>
        <item>Tom Hardy\nMichelle Williams\nRiz Ahmed\nScott Haze\nReid Scott</item>
        <item>Shameik Moore\nJake Johnson\nHailee Steinfeld\nMahershala Ali\nBrian Tyree Henry\nLily Tomlin\nLuna Lauren Velez\nJohn Mulaney\nKimiko Glenn\nNicolas Cage\nLiev Schreiber</item>
        <item>Robert Downey Jr.\nChris Hemsworth\nMark Ruffalo\nChris Evans\nScarlett Johansson\nBenedict Cumberbatch\nDon Cheadle\nTom Holland\nChadwick Boseman\nPaul Bettany\nElizabeth Olsen\nAnthony Mackie\nSebastian Stan\nDanai Gurira\nLetitia Wright\nDave Bautista\nZoe Saldana\nJosh Brolin\nChris Pratt</item>
        <item>Chris Pratt\nZoe Saldana\nDave Bautista\nVin Diesel\nBradley Cooper\nLee Pace\nMichael Rooker\nKaren Gillan\nDjimon Hounsou\nJohn C. Reilly\nGlenn Close\nBenicio del Toro</item>
        <item>Tom Holland\nSamuel L. Jackson\nZendaya\nCobie Smulders\nJon Favreau\nJ. B. Smoove\nJacob Batalon\nMartin Starr\nMarisa Tomei\nJake Gyllenhaal</item>
        <item>Mayumi Tanaka\nKazuya Nakai\nAkemi Okamura\nKappei Yamaguchi\nHiroaki Hirata\nIkue Ohtani\nYuriko Yamaguchi\nKazuki Yao\nChō\nHōchū Ōtsuka\nRyoko Shinohara\nTeruyuki Kagawa</item>
        <item>Ryunosuke Kamiki\nMone Kamishiraishi\nRyo Narita\nAoi Yūki\nNobunaga Shimazaki\nKaito Ishikawa\nKanon Tani\nMasami Nagasawa\nEtsuko Ichihara</item>
    </string-array>
    <string-array name="cinematography">
        <item>Trent Opaloch</item>
        <item>Ken Seng</item>
        <item>-</item>
        <item>Matthew Libatique</item>
        <item>-</item>
        <item>Trent Opaloch</item>
        <item>Ben Davis</item>
        <item>Matthew J. Lloyd</item>
        <item>Takeo Ogiwara</item>
        <item>Makoto Shinkai</item>
    </string-array>
    <string-array name="edited_by">
        <item>Jeffrey Ford\nMatthew Schmidt</item>
        <item>Julian Clarke</item>
        <item>-</item>
        <item>Maryann Brandon\nAlan Baumgarten</item>
        <item>Robert Fisher Jr.</item>
        <item>Jeffrey Ford\nMatthew Schmidt</item>
        <item>Fred Raskin\nCraig Wood\nHughes Winborne</item>
        <item>Dan Lebental\nLeigh Folsom-Boyd</item>
        <item>Nobuhiro Maki</item>
        <item>Makoto Shinkai</item>
    </string-array>
    <string-array name="production_companies">
        <item>Marvel Studios</item>
        <item>Marvel Entertainment\nKinberg Genre\nThe Donners\' Company\nTSG Entertainment</item>
        <item>Toei Animation</item>
        <item>Columbia Pictures\nMarvel Entertainment\nTencent Pictures\nArad Productions\nMatt Tolmach Productions\nPascal Pictures</item>
        <item>Columbia Pictures\nSony Pictures Animation\nMarvel Entertainment\nArad Productions\nLord Miller Productions\nPascal Pictures</item>
        <item>Marvel Studios</item>
        <item>Marvel Studios</item>
        <item>Columbia Pictures\nMarvel Studios\nPascal Pictures</item>
        <item>Toei Animation</item>
        <item>CoMix Wave Films</item>
    </string-array>
    <string-array name="distributed_by">
        <item>Walt Disney Studios\nMotion Pictures</item>
        <item>	20th Century Fox</item>
        <item>Toei Company\n20th Century Fox Japan</item>
        <item>Sony Pictures Releasing</item>
        <item>Sony Pictures Releasing</item>
        <item>Walt Disney Studios\nMotion Pictures</item>
        <item>Walt Disney Studios\nMotion Pictures</item>
        <item>Sony Pictures Releasing</item>
        <item>Toei Company</item>
        <item>Toho</item>
    </string-array>
    <string-array name="running_time">
        <item>149 minutes</item>
        <item>108 minutes</item>
        <item>100 minutes</item>
        <item>112 minutes</item>
        <item>117 minutes</item>
        <item>181 minutes</item>
        <item>122 minutes</item>
        <item>129 minutes</item>
        <item>107 minutes</item>
        <item>107 minutes</item>
    </string-array>
    <string-array name="ratings">
        <item>8,5 / 10</item>
        <item>8,0 / 10</item>
        <item>8,0 / 10</item>
        <item>8,0 / 10</item>
        <item>8,5 / 10</item>
        <item>8,7 / 10</item>
        <item>8,1 / 10</item>
        <item>8,1 / 10</item>
        <item>8,0 / 10</item>
        <item>8,4 / 10</item>
    </string-array>
    <string-array name="data_title">
        <item>Avengers: Infinity Wars</item>
        <item>Deadpool</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Venom</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Avengers: End Game</item>
        <item>Guardians Of The Galaxy Vol. 1</item>
        <item>Spider-Man: Far From Home</item>
        <item>One Piece Film: Z</item>
        <item>Kimi No Nawa</item>
    </string-array>
    <string-array name="screenplay">
        <item>Christopher Markus\nStephen McFeely</item>
        <item>-</item>
        <item>Akira Toriyama</item>
        <item>Jeff Pinkner\nScott Rosenberg\nKelly Marcel</item>
        <item>Phil Lord\nRodney Rothman</item>
        <item>Christopher Markus\nStephen McFeely</item>
        <item>-</item>
        <item>-</item>
        <item>Osamu Suzuki</item>
        <item>Makoto Shinkai</item>
    </string-array>
    <string-array name="music_by">
        <item>Alan Silvestri</item>
        <item>Tom Holkenborg</item>
        <item>Norihito Sumitomo</item>
        <item>Ludwig Göransson</item>
        <item>Daniel Pemberton</item>
        <item>Alan Silvestri</item>
        <item>Tyler Bates</item>
        <item>Michael Giacchino</item>
        <item>Kohei Tanaka\nShirō Hamaguchi</item>
        <item>Radwimps</item>
    </string-array>
</resources>